--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             </div>
         </div>
         <p class="letter letter-N">N</p>
+
+        <p class="credit">a Dhananjay Haridas production</p> 
     </div>
 </body>
 </html>
